[project]
name = "rl-qlearn-cartpole"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "VadanKhan", email = "vadankhan1@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
