[project]
name = "rl-qlearn-cartpole"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "VadanKhan", email = "vadankhan1@gmail.com"},
]
dependencies = ["numpy==1.23.5", "gym[classic_control]>=0.26.2", "matplotlib>=3.10.3", "ipykernel>=6.29.5", "setuptools>=80.9.0"]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
